--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -115,10 +115,19 @@ endif(CMAKE_SYSTEM MATCHES "SunOS.*")
 # Find and install python
 
 if(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
-  set(PYTHON_DIR "${Slicer3_BINARY_DIR}/../Slicer3-lib/python-build")
+  #assum get build test build tree
+  get_filename_component(PARENT_BUILD_DIR "${Slicer3_BINARY_DIR}" PATH)
+  set(PYTHON_DIR "${PARENT_BUILD_DIR}/Slicer3-lib/python-build")
+
+  #try superbuild tree
+  if(NOT EXISTS ${PYTHON_DIR})
+    get_filename_component(SUPER_BUILD_DIR "${Slicer3_BINARY_DIR}" PATH)
+    set(PYTHON_DIR "${SUPER_BUILD_DIR}/python-build")
+  endif()
   if(WIN32 AND NOT EXISTS "${PYTHON_DIR}" AND EXISTS "${PYTHON_INCLUDE_PATH}")
     get_filename_component(PYTHON_DIR "${PYTHON_INCLUDE_PATH}" PATH)
   endif(WIN32 AND NOT EXISTS "${PYTHON_DIR}" AND EXISTS "${PYTHON_INCLUDE_PATH}")
+
   if(EXISTS "${PYTHON_DIR}")
     install(DIRECTORY
       "${PYTHON_DIR}/"
