COMP: Superbuild - Make sure itcl is a dependency of Slicer when Slicer3_USE_PYTHONQT_WITH_TCL is ON
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14911 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -414,6 +414,12 @@ if(Slicer3_USE_KWWIDGETS)
   endif()
 endif()
 
+if (Slicer3_USE_PYTHONQT_WITH_TCL)
+  if(UNIX)
+    list(APPEND slicer_DEPENDENCIES itcl)
+  endif()
+endif()
+
 if(Slicer3_USE_QT)
   list(APPEND slicer_DEPENDENCIES CTK)
 endif()
