ENH: Adding build support for GNU/kFreeBSD
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14915 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -138,13 +138,20 @@ proc launch_SetEnvironment {} {
     #
     switch $::tcl_platform(os) {
         "SunOS" { set ::env(BUILD) $::SOLARIS }
-        "Linux" {           
+        "GNU/kFreeBSD" {
             if {$::tcl_platform(machine) == "x86_64"} {
-                set ::env(BUILD) $::LINUX_64 
+                set ::env(BUILD) $::LINUX_64
             } else {
                 set ::env(BUILD) $::LINUX
             }
-        }       
+        }
+        "Linux" {
+            if {$::tcl_platform(machine) == "x86_64"} {
+                set ::env(BUILD) $::LINUX_64
+            } else {
+                set ::env(BUILD) $::LINUX
+            }
+        }
         "Darwin" { 
             if {$::tcl_platform(machine) == "i386"} {
                 set ::env(BUILD) $::DARWIN_X86
