BUG: CPack - Make sure QTDBUS is installed on UNIX and APPLE systems
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14918 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -153,6 +153,9 @@ endif(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
 if(Slicer3_USE_QT)
 
   SET (QTLIBLIST QTCORE QTGUI QTNETWORK QTXML QTTEST QTSQL QTOPENGL QTWEBKIT PHONON QTXMLPATTERNS)
+  IF(UNIX OR APPLE)
+    LIST(APPEND QTLIBLIST QTDBUS)
+  ENDIF()
   FOREACH(qtlib ${QTLIBLIST})
     IF (NOT WIN32)
       IF (QT_${qtlib}_LIBRARY_RELEASE)
