ENH: EMSegment - Add test data: EMSeg-Brain-MRT1T2_small.mrml
The data directory can be referenced from EMSegment tests using EMSegment_TESTING_DATA_SOURCE_DIR

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14925 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -192,5 +192,6 @@ Slicer3_build_qtmodule(
 ADD_SUBDIRECTORY(Widgets/Plugins)
 
 if(BUILD_TESTING)
+  SET(EMSegment_TESTING_DATA_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Testing/Data)
   ADD_SUBDIRECTORY(Testing)
 endif(BUILD_TESTING)
