--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -193,5 +193,6 @@ ADD_SUBDIRECTORY(Widgets/Plugins)
 
 if(BUILD_TESTING)
   SET(EMSegment_TESTING_DATA_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Testing/Data)
+  ADD_SUBDIRECTORY(Widgets/Testing)
   ADD_SUBDIRECTORY(Testing)
 endif(BUILD_TESTING)
