COMP: EMSegment - Move cxx test files from EMSegment/Testing to EMSegment/Widgets/Testing/Cxx
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14927 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -194,5 +194,5 @@ ADD_SUBDIRECTORY(Widgets/Plugins)
 if(BUILD_TESTING)
   SET(EMSegment_TESTING_DATA_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Testing/Data)
   ADD_SUBDIRECTORY(Widgets/Testing)
-  ADD_SUBDIRECTORY(Testing)
+  #ADD_SUBDIRECTORY(Testing)
 endif(BUILD_TESTING)
