--- a/QTModules/EMSegment/Testing/Cxx/CMakeLists.txt
+++ b/QTModules/EMSegment/Testing/Cxx/CMakeLists.txt
@@ -1,24 +1,21 @@
-
-SET(KIT EMSegmentMRMLWidgets)
+SET(KIT EMSegment)
 
 SET(CMAKE_TESTDRIVER_AFTER_TESTMAIN  "DEBUG_LEAKS_ENABLE_EXIT_ERROR();")
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
-  qSlicerEMSegmentAnatomicalTreeWidgetTest1.cxx
-  qSlicerEMSegmentGraphWidgetTest1.cxx
   vtkPlotGaussianTest1.cxx
+  qSlicerEMSegmentGraphWidgetTest1.cxx
   
   EXTRA_INCLUDE TestingMacros.h
   )
 
 SET (TestsToRun ${Tests})
 REMOVE (TestsToRun ${KIT}CxxTests.cxx)
-
 SET(LIBRARY_NAME ${lib_name})
 
 ADD_EXECUTABLE(${KIT}CxxTests ${Tests})
-TARGET_LINK_LIBRARIES(${KIT}CxxTests ${LIBRARY_NAME})
+TARGET_LINK_LIBRARIES(${KIT}CxxTests ${LIBRARY_NAME} vtkRendering)
 
-SET( KIT_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
+SET(KIT_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
 IF(WIN32)
   SET(KIT_TESTS ${CXX_TEST_PATH}/${CMAKE_BUILD_TYPE}/${KIT}CxxTests)
 ENDIF(WIN32)
@@ -27,9 +24,9 @@ ENDIF(WIN32)
 # Convenient macros
 #
 
-MACRO(SIMPLE_TEST  TESTNAME)
+MACRO( SIMPLE_TEST  TESTNAME )
   ADD_TEST( ${TESTNAME} ${LAUNCH_EXE} ${KIT_TESTS} ${TESTNAME} )
-ENDMACRO()
+ENDMACRO( SIMPLE_TEST )
 
 MACRO(SCENE_TEST TESTNAME SCENEFILENAME)
   ADD_TEST( ${TESTNAME}_${SCENEFILENAME}
@@ -42,6 +39,5 @@ ENDMACRO()
 # Add Tests
 #
 
-SCENE_TEST(qSlicerEMSegmentAnatomicalTreeWidgetTest1 EMSeg-Brain-MRT1T2_small.mrml)
-SIMPLE_TEST(qSlicerEMSegmentGraphWidgetTest1)
-SIMPLE_TEST(vtkPlotGaussianTest1)
+#SIMPLE_TEST( FooTest1 )
+#SCENE_TEST( BarTest1 EMSeg-Brain-MRT1T2_small.mrml)
