--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -157,29 +157,31 @@ if(Slicer3_USE_QT)
     LIST(APPEND QTLIBLIST QTDBUS)
   ENDIF()
   FOREACH(qtlib ${QTLIBLIST})
-    IF (NOT WIN32)
-      IF (QT_${qtlib}_LIBRARY_RELEASE)
+    IF (QT_${qtlib}_LIBRARY_RELEASE)
+      IF(APPLE)
+        INSTALL(DIRECTORY "${QT_${qtlib}_LIBRARY_RELEASE}" DESTINATION lib/Qt COMPONENT Runtime)
+      ELSEIF(UNIX)
+        # Install .so and versioned .so.x.y
         GET_FILENAME_COMPONENT(QT_LIB_DIR_tmp ${QT_${qtlib}_LIBRARY_RELEASE} PATH)
         GET_FILENAME_COMPONENT(QT_LIB_NAME_tmp ${QT_${qtlib}_LIBRARY_RELEASE} NAME)
         INSTALL(DIRECTORY ${QT_LIB_DIR_tmp}/ DESTINATION lib/Qt COMPONENT Runtime
-                FILES_MATCHING PATTERN "${QT_LIB_NAME_tmp}*"
+                FILES_MATCHING "${QT_LIB_NAME_tmp}*"
                 PATTERN "${QT_LIB_NAME_tmp}*.debug" EXCLUDE)
-      ENDIF (QT_${qtlib}_LIBRARY_RELEASE)
-    ELSE (NOT WIN32)
-      GET_FILENAME_COMPONENT(QT_DLL_PATH_tmp ${QT_QMAKE_EXECUTABLE} PATH)
-      INSTALL(FILES ${QT_DLL_PATH_tmp}/${qtlib}4.dll DESTINATION bin COMPONENT Runtime)
-    ENDIF (NOT WIN32)
-
+      ELSEIF(WIN32)
+        GET_FILENAME_COMPONENT(QT_DLL_PATH_tmp ${QT_QMAKE_EXECUTABLE} PATH)
+        INSTALL(FILES ${QT_DLL_PATH_tmp}/${qtlib}4.dll DESTINATION bin COMPONENT Runtime)
+      ENDIF(APPLE)
+    ENDIF (QT_${qtlib}_LIBRARY_RELEASE)
   ENDFOREACH(qtlib)
   
   IF(Slicer3_USE_PYTHONQT)
     IF(WIN32)
       INSTALL(FILES ${PYTHONQT_INSTALL_DIR}/bin/PythonQt.dll DESTINATION bin COMPONENT Runtime)
-    ELSEIF(UNIX)
-      # needs to install symlink version named libraries as well.
-      INSTALL(FILES ${PYTHONQT_INSTALL_DIR}/lib/libPythonQt.so DESTINATION bin COMPONENT Runtime)
     ELSEIF(APPLE)
-      INSTALL(FILES ${PYTHONQT_INSTALL_DIR}/lib/libPythonQt.dylib DESTINATION bin COMPONENT Runtime)
+      # needs to install symlink version named libraries as well.
+      INSTALL(FILES ${PYTHONQT_INSTALL_DIR}/lib/libPythonQt.dylib DESTINATION lib/PythonQt COMPONENT Runtime)
+    ELSEIF(UNIX)
+      INSTALL(FILES ${PYTHONQT_INSTALL_DIR}/lib/libPythonQt.so DESTINATION lib/PythonQt COMPONENT Runtime)
     ENDIF(WIN32)
   ENDIF(Slicer3_USE_PYTHONQT)
 endif(Slicer3_USE_QT)
