ENH: Annotation module: New displayable Manager helper.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14945 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -37,6 +37,7 @@ SET(DisplayableManager_SRCS
   # 2D
   MRMLDisplayableManager/vtkMRMLAnnotationSliceViewDisplayableManager.cxx
 
+  MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManagerHelper.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
   )
   
