ENH: EMSegment - Anatomical tree can optionally display checkboxes allowing to show/hide columns
Signed-off-by: Jean-Christophe Fillion-Robin <jchris.fillionr@kitware.com>

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14954 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -119,7 +119,7 @@ SET(qt_module_UI_SRCS
   Resources/UI/qSlicerEMSegmentModule.ui
 
   # Widgets
-  #Resources/UI/qMRMLEMSegmentAnatomicalTreeWidget.ui
+  Resources/UI/qSlicerEMSegmentAnatomicalTreeWidget.ui
   Resources/UI/qSlicerEMSegmentGraphWidget.ui
 
   # Workflow: MRI Human brain
