ENH: Annotation module: Special checkin for Kilian.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14976 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -26,14 +26,14 @@ SET(DisplayableManager_SRCS
   MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManagerHelper.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
   
-  MRMLDisplayableManager/vtkMRMLAnnotationTextDisplayableManager.cxx
+  #MRMLDisplayableManager/vtkMRMLAnnotationTextDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationFiducialDisplayableManager.cxx
-  MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
-  MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
-  MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
-  MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
-  MRMLDisplayableManager/vtkMRMLAnnotationBidimensionalDisplayableManager.cxx
-  MRMLDisplayableManager/vtkMRMLAnnotationROIDisplayableManager.cxx     
+  #MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
+  #MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
+  #MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
+  #MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
+  #MRMLDisplayableManager/vtkMRMLAnnotationBidimensionalDisplayableManager.cxx
+  #MRMLDisplayableManager/vtkMRMLAnnotationROIDisplayableManager.cxx     
   )
   
 #-----------------------------------------------------------------------
