ENH: Annotation module: Ruler and BiDimensional measurement work in 2D and 3D now.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14994 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -31,8 +31,8 @@ SET(DisplayableManager_SRCS
   #MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
   #MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
   #MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
-  #MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
-  #MRMLDisplayableManager/vtkMRMLAnnotationBidimensionalDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
+  MRMLDisplayableManager/vtkMRMLAnnotationBidimensionalDisplayableManager.cxx
   #MRMLDisplayableManager/vtkMRMLAnnotationROIDisplayableManager.cxx     
   )
   
