ENH: Annotation module: Add extra layer on top of vtkWidgets to be able to access protected attributes. Now the measurement display in 2D works correctly.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15010 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -45,7 +45,26 @@ SET(Logic_SRCS
   Logic/vtkSlicerAnnotationModuleLogic.cxx
   Logic/vtkSlicerAnnotationModuleLogic.h
   )
-
+  
+#-----------------------------------------------------------------------
+#
+# WIDGETS
+#
+#-----------------------------------------------------------------------
+SET(Widget_SRCS
+  # our own ruler
+  Widgets/vtkAnnotationRulerWidget.cxx
+  Widgets/vtkAnnotationRulerWidget.h
+  Widgets/vtkAnnotationRulerRepresentation.cxx
+  Widgets/vtkAnnotationRulerRepresentation.h
+  
+  # our own bidimensional
+  Widgets/vtkAnnotationBidimensionalWidget.cxx
+  Widgets/vtkAnnotationBidimensionalWidget.h
+  Widgets/vtkAnnotationBidimensionalRepresentation.cxx
+  Widgets/vtkAnnotationBidimensionalRepresentation.h
+  )
+  
 #-----------------------------------------------------------------------
 #
 # GUI
@@ -104,6 +123,7 @@ SET(qt_module_SRCS
   ${DisplayableManager_SRCS}
   ${DisplayableManagerInstantiator_SRCS}
   ${Logic_SRCS}
+  ${Widget_SRCS}
   ${GUI_SRCS}
   #${DEPRECATED_SRCS}
   qSlicerAnnotationModule.cxx
