COMP: switch patch version to 3.6.2-beta
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15042 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ endif(APPLE)
 set(Slicer3_VERSION_MAJOR "3")
 set(Slicer3_VERSION_MINOR "6")
 if(NOT Slicer3_VERSION_PATCH)
-  set(Slicer3_VERSION_PATCH "1")
+  set(Slicer3_VERSION_PATCH "2-beta")
 endif(NOT Slicer3_VERSION_PATCH)
 set(Slicer3_VERSION "${Slicer3_VERSION_MAJOR}.${Slicer3_VERSION_MINOR}")
 set(Slicer3_VERSION_FULL "${Slicer3_VERSION}.${Slicer3_VERSION_PATCH}")
