ENH: Added GrowCutSegmentImageFilter
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15083 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/vtkITK/CMakeLists.txt
+++ b/Libs/vtkITK/CMakeLists.txt
@@ -75,6 +75,7 @@ set(vtkITK_SRCS
   vtkITKBSplineTransform.cxx
   vtkITKTimeSeriesDatabase.cxx
   vtkITKIslandMath.cxx
+  vtkITKGrowCutSegmentationImageFilter.cxx
   )
 
 # Abstract/pure virtual classes
