ENH: helper class to compress images in memory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15084 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Logic/CMakeLists.txt
+++ b/Base/Logic/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SlicerBaseLogic_SRCS
   vtkDataIOManagerLogic.cxx
   # slicer's vtk extensions (filters)
   vtkImageSlicePaint.cxx 
+  vtkImageStash.cxx 
   vtkImageSlice.cxx 
   vtkImageFillROI.cxx
   vtkSlicerGlyphSource2D.cxx
