ENH: threaded image compression utility and test for future use in undo/redo function of Editor module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15104 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Logic/Testing/CMakeLists.txt
+++ b/Base/Logic/Testing/CMakeLists.txt
@@ -31,3 +31,7 @@ ADD_TEST( vtkSlicerTransformLogicTest1 ${LAUNCH_EXE}
   ${KIT_TESTS} vtkSlicerTransformLogicTest1
   ${CMAKE_CURRENT_SOURCE_DIR}/affineTransform.txt
   )
+
+ADD_EXECUTABLE(ImageStashTest ImageStashTest.cxx)
+TARGET_LINK_LIBRARIES(ImageStashTest ${lib_name})
+ADD_TEST( ImageStashTest ${LAUNCH_EXE} ImageStashTest )
