ENH: add lookup table menu icons for volume rendering and reorganize and rename presets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15137 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/VolumeRendering/CMakeLists.txt
+++ b/Modules/VolumeRendering/CMakeLists.txt
@@ -128,3 +128,11 @@ install(
   DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}
   )
 
+file(GLOB IMAGEFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "ImageData/*.png")
+foreach(file ${IMAGEFILES})
+  configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/${file}
+    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/${file}
+    COPYONLY
+    )
+endforeach(file)
