COMP: fix installer configuration for volume rendering menu icons
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15149 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/VolumeRendering/CMakeLists.txt
+++ b/Modules/VolumeRendering/CMakeLists.txt
@@ -135,4 +135,8 @@ foreach(file ${IMAGEFILES})
     ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/${file}
     COPYONLY
     )
+  install(
+    FILES ${file}
+    DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/ImageData
+    )
 endforeach(file)
