BUG: workaround for use of @SVN@ string in cmake configure and slicer module path as a variable
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15169 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -1059,14 +1059,16 @@ proc launch_ImportModulePaths {} {
     }
 
     # 
-    # find just the line that has the actual path in it the one that contains @SVN@
+    # find just the line that has the actual path in it the one that contains \@SVN\@
     # - ignore other lines that might be error messages or diagnotics
     #
     set newpath ""
     foreach line $::globallines {
-      if { [string match "*@SVN@*" $line] } {
+      set svntag "@SVN"
+      set svntag "$svntag@"
+      if { [string match "*$svntag*" $line] } {
           # substitute in svnrevision
-          set newpath [string map [list \@SVN\@ $svnrevision] $line]
+          set newpath [string map [list $svntag $svnrevision] $line]
           # strip cruft from front of path
           set newpath [string range $newpath [string first "/" $newpath] end]
         }
