ENH: install CMTK's lib and bin directories
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15200 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -4,36 +4,57 @@ include(ExternalProject)
 
 #http://cmake.org/gitweb?p=cmake.git;a=blob;f=Modules/ExternalProject.cmake
 
+
+
 # --------------------------------------------------------------------------
 # Find Slicer3
 
 if(NOT Slicer3_SOURCE_DIR)
-#  find_package(Slicer3 REQUIRED)
-#  include(${Slicer3_USE_FILE})
-#  slicer3_set_default_install_prefix_for_external_projects()
+  find_package(Slicer3 REQUIRED)
+  include(${Slicer3_USE_FILE})
+  slicer3_set_default_install_prefix_for_external_projects()
 endif(NOT Slicer3_SOURCE_DIR)
 
-set(CMTK_SOURCE_DIR CMTK-source)
+set(CMTK_SOURCE_DIR CMTK)
 set(CMTK_BINARY_DIR CMTK-build)
 set(CMTK_INSTALL_DIR CMTK-install)
 
-ExternalProject_Add(CMTK
+message("######### ALL: ${CMAKE_CURRENT_BINARY_DIR}/${CMTK_BINARY_DIR}/bin/registration")
+message("######### CMTK_BINARY_DIR: ${CMTK_BINARY_DIR}")
+message("######### Slicer3_INSTALL_PLUGINS_BIN_DIR: ${Slicer3_INSTALL_PLUGINS_BIN_DIR}")
+message("######### CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+
+set(PROJECTNAME CMTK)
+ExternalProject_Add(${PROJECTNAME}
   SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/trunk/core"
-  SVN_USERNAME slicerbot
-  SVN_PASSWORD slicer
-  SOURCE_DIR ${CMTK_SOURCE_DIR}
-  BINARY_DIR ${CMTK_BINARY_DIR}
-#  DEPENDS  ${ITK_DEPEND}
-#  CMAKE_GENERATOR ${gen}
+#  SVN_USERNAME slicerbot
+#  SVN_PASSWORD slicer
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
-#    -DITK_DIR:PATH=${ITK_DIR}
     -DCMAKE_INSTALL_PREFIX:PATH=${CMTK_INSTALL_DIR}
-#  INSTALL_DIR ${CMTK_INSTALL_DIR}
+)
+
+#file(GLOB CMTKFILES RELATIVE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/bin/" "*")
+
+
+install(
+#  FILES ${CMTKFILES}
+#  FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/bin/registration
+  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/bin/
+  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+  FILES_MATCHING PATTERN "*"
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+              GROUP_EXECUTE GROUP_READ
+              WORLD_EXECUTE WORLD_READ
 )
 
 install(
-  FILES ${CMTK_BINARY_DIR}/bin/registration
-  DESTINATION /tmp/Slicer3.6.2
- # DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/lib/
+  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+  FILES_MATCHING PATTERN "*"
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+              GROUP_EXECUTE GROUP_READ
+              WORLD_EXECUTE WORLD_READ
 )
+
+
